--- a/src/pages/PriorityPage.css
+++ b/src/pages/PriorityPage.css
@@ -7,17 +7,15 @@
   
   .priority-section {
     flex: 1;
-    min-width: 200px; 
-    border: 1px solid #ddd;
-    padding: 16px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
+  
   
   .ticket {
     margin-top: 8px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow:2px 2px 2px rgba(128, 128, 128, 0.158) ;
   }
-  
 .ticket {
   border: 1px solid #ddd; 
   padding: 10px;
