--- a/src/pages/StatusPage.css
+++ b/src/pages/StatusPage.css
@@ -13,12 +13,36 @@
   }
   
   .ticket {
-    margin-top: 8px;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow:2px 2px 2px rgba(128, 128, 128, 0.158) ;
+    background-color: #ffff;
+    box-shadow: 0px 0px 8px 0px #0000001a;
+    border: 1px solid #e6e7eb;
   }
   .extra-icon{
-    position: sticky;
-    left: 40%;
+    margin-left: 40%;
   }
+  .status-container .status-section .title{
+    font-size: 1em;
+    font-weight: 600;
+    color: #373737;
+    font-family: "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+    }
+.ticket-id{
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-weight: 200;
+  font-family: "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
+  scroll-behavior: smooth;
+
+}
+  
+.profile-status{
+  border-radius: 50%;
+  font-size: 10px;
+  background-color: yellow;
+  padding: 3px;
+  position: sticky;
+  margin-left: 60%;
+}
+.icon , .extra-icon{
+  font-size: large;
+}
